# adk_samples

./: README.md
09_adk_agent_team/: ATTRIBUTION.md  requirements.txt
09_adk_agent_team/agents/: __init__.py
09_adk_agent_team/agents/flight_booker/: agent.py  instruction.txt  tools.py  types.py
09_adk_agent_team/agents/itinerary_agent/: __init__.py  instruction.txt  tools.py
09_adk_agent_team/agents/travel_planner/: agent.py
version_1_website_builder_simple/: .env.example  README.md  agent_runner.py  pyproject.toml
version_2_sequential_website_agent/: .gitignore  README.md  main.py  pyproject.toml  rotating_hexagon_simulation.ipynb
version_3_parallel_research_agent/: README.md  agent_flow_diagram.md
version_4_deploy_to_gcloud/: .gitignore  Dockerfile  README.md  agent_flow_diagram.md  agent_runner.py  main.py  pyproject.toml  requirements.txt
version_5_config_type/: README.md  main.py  pyproject.toml
version_5_config_type/my_agent/: physics_tutor_agent.yaml  python_tutor_agent.yaml  root_agent.yaml
version_6_adk_nocode/: .gitignore  README.md  agent_flow_diagram.md  main.py  pyproject.toml
version_6_adk_nocode/outputs/: output1.html
version_6_adk_nocode/web_page_generator_2/: root_agent.yaml
version_7_programmatic_tool_execution/: README.md  agent.py  cmd.py  main.py  programmatic_tool_exec.md  pyproject.toml  theailanguage_config.json
version_8_gmail_agent/gmail_agent/: .env.example  README.md  requirements.txt
version_9_adk_agent_team/: .env.example  .gitignore  README.md
visualisations/: 01_Agent Interaction Methods.html
(+53 files in other folders)
